syntax = "proto3";

option go_package = "github.com/woozie-10/geoip-service";

import "google/api/annotations.proto";

service IPService {
  rpc GetInfo(IPRequest) returns (IPInfoResponse){
    option (google.api.http) = {
      post: "/v1/ip"
      body: "*"
    };
  }
}

message IPRequest {
  string address = 1;
}

message IPInfoResponse {
  string city_name = 1;
  string country_name = 2;
  string country_iso_code = 3;
  string time_zone = 4;
  string coordinates = 5;
}
